# advent_of_code

./: .gitignore  LICENSE  common_tools.c  common_tools.h  docscript.py
2021/: .gitignore  README.md  common_tools.c  common_tools.h  docscript.py
2021/day01/src/: part2.c
2021/day02/: CMakeLists.txt
2021/day02/src/: part2.c
2021/day03/: CMakeLists.txt
2021/day03/src/: part2.c
2021/day04/src/: part1.c
2021/day05/src/: part1.c  part2.c
2021/day06/c/: part2.c
2021/day06/src/: part1.c
2021/day07/src/: part1.c  part2.c
2021/day08/c/: part1.c
2021/day08/src/: part2.c
2021/day09/src/: part1.c  part2.c
2021/day11/src/: part2.py
2022/: .gitignore  docscript.py
2022/day01/py/: part1.py
2022/day02/py/: part1.py  part2.py
2022/day03/py/: part2.py
2022/day04/py/: part1.py
2022/day05/py/: part1.py  (+1 more)
2023/: .gitignore  docscript.py
2023/day03/: out.txt
2024/: .gitignore  docscript.py  requirements.txt
advent_of_code_utils/: README.md  pyproject.toml
advent_of_code_utils/advent_of_code_utils/: classes.py  data_manip.py  fileio.py  output.py
day01/: part1.py  part2.py
day01/src/: part1.c  part2.c
day02/src/: part1.c
day03/: part1.py  part2.py
day03/py/: part1.py
day03/src/: part1.c
day04/: part1.py  part2.py
day04/src/: part2.c
day05/src/: part1.c
day06/py/: part1.py  part2.py
day07/py/: final.py  part1.py
day08/py/: part1.py
day08/src/: part2.c
day09/py/: part2.py
day09/src/: part1.c
day10/py/: part2.py
day10/src/: part1.py  part2.py
day11/py/: part1.py
day11/src/: part1.py
day12/py/: part2.py
(+41 files in other folders)
