[project]
name = "advent_of_code_utils"
version = "0.1.0"
description = "Utilities for Advent of Code 2024"
authors = [{name="Angel Cascarino", email="angel.cascarino@googlemail.com"}]
license = {text = "MIT"}
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
